# cpp-starter-project

./: .gitignore  CMakeLists.txt  LICENSE  README.md  run.sh
cmake/: checkBuild.cmake  config.h.in  generateDoc.cmake  generateVersionHeader.cmake  getGitHash.cmake
docs/: Doxyfile  readme.md
src/: CMakeLists.txt  dummy.cpp
src/Client/: CMakeLists.txt  Client.cpp  Client.h
src/CppSocketLib/: CMakeLists.txt  SocketLib.cpp  SocketLib.h
src/Server/: CMakeLists.txt  Server.cpp  Server.h
test/: CMakeLists.txt
test/unit_tests/: CMakeLists.txt  gtest_check.cpp
